Fix footer on mobile

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,6 +20,10 @@ footer {
 
   p {
     margin-bottom: 0;
+
+    @include on-mobile {
+      text-align: center;
+    }
   }
 
   .page-title {
