--- a/_sass/_utils.scss
+++ b/_sass/_utils.scss
@@ -5,3 +5,9 @@
 .color-secondary {
   color: $brand-secondary;
 }
+
+.hidden-mobile {
+  @include on-mobile {
+    display: none;
+  }
+}
